[package]
name = "roomba-s9plus-cli"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
description = "CLI to control the Roomba S9+"
homepage = "https://github.com/cecton/roomba-s9plus-cli"
repository = "https://github.com/cecton/roomba-s9plus-cli"
documentation = "https://docs.rs/roomba-s9plus-cli"
readme = "README.md"
keywords = ["roomba"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roomba = { git = "https://github.com/cecton/roomba.git", rev = "97c1c515e8f4cec5eb1f43ddc9d8d47d485df53b" }
structopt = "0.3.15"
async-std = "1.6"
futures-util = "0.3"
